# print-pcapp

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  package.json
.claude/: settings.local.json
.cursor/: mcp.json
.cursor/plans/: 云打印客户端需求与架构_c4d163a2.plan.md
.cursor/skills/antd/: SKILL.md
docs/: 打印服务发现与配置-记忆摘要.md
docs/specs/: 2026-05-14-api-integration-design.md  2026-05-14-layout-restructure-design.md
docs/superpowers/plans/: 2026-05-14-file-manager-layout-optimization.md  2026-05-14-global-error-handler-plan.md  (+11 more)
docs/接口文档/: HTTP接口文档.md  WebSocket接口文档.md
scripts/: generate-app-icons.py
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  discovery.rs  entities.rs  http_server.rs  lib.rs  logger.rs  main.rs  network.rs  print_queue.rs  qr.rs  repos.rs
src-tauri/static/: mobile-upload.html
src/api/: http-client.ts  print-api.ts  types.ts  websocket-client.ts
src/components/: FileIcon.vue  FileListItem.vue  FileUploadZone.vue  PrinterStatusCard.vue  QrCodeCard.vue  SystemStatusCard.vue
src/composables/: useFileSystem.ts  useLogger.ts  useNavCollapse.ts  usePlatform.ts  usePrintService.ts  useWebSocket.ts
src/layouts/: DesktopLayout.vue  MobileLayout.vue
src/router/: index.ts
src/stores/: app-config.ts  file-browser.ts  index.ts  print-history.ts  print-task.ts  printer-list.ts  settings-nav.ts  settings.ts  system-log.ts
src/utils/: export-csv.ts  file-types.ts  ip-range.ts  lan-scan-range.ts
(+42 files in other folders)
