[package]
name = "print"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "print_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
base64 = "0.22"
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
if-addrs = "0.13"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
tower-http = { version = "0.6", features = ["cors"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["multipart", "json"] }
tokio-tungstenite = { version = "0.26", features = ["connect"] }
futures-util = "0.3"

